--- a/.gitignore
+++ b/.gitignore
@@ -28,5 +28,6 @@ puppet/modules/data/files/*.tgz
 puppet/modules/data/files/*.zip
 puppet/modules/data/files/*.tar.gz
 *.apk
-docs/*.html
+/*.htm*
+docs/*.htm*
 preprocess.ini
