No bug - Make android-sync APK start an activity when deployed to device.
Android does not deliver broadcast intents to a package before the
user has "started" it (see
http://commonsware.com/blog/2011/07/13/boot-completed-regression-confirmed.html
for discussion).  During development, it is awkward to "start" the
android-sync APK.  This commit adds a dummy
`BackgroundDeveloperActivity` and registers it, so that on deploy (at
least from Eclipse) Android "starts" the android-sync APK
automatically.  This makes testing `BroadcastReceiver` instances
smooth.

--- a/AndroidManifest.xml.in
+++ b/AndroidManifest.xml.in
@@ -31,6 +31,19 @@
 #include manifests/SyncAndroidManifest_activities.xml.in
 #include manifests/SyncAndroidManifest_services.xml.in
 
+        <activity
+            android:noHistory="true"
+            android:excludeFromRecents="true"
+            android:theme="@android:style/Theme.NoDisplay"
+            android:name="org.mozilla.android.sync.test.helpers.BackgroundDeveloperActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <!-- Adding a launcher will make Firefox Sync appear
+                     on the Apps screen, which we want when testing. -->
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
     </application>
 
     <instrumentation
