--- a/AndroidManifest.xml.in
+++ b/AndroidManifest.xml.in
@@ -2,11 +2,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.mozilla.gecko"
-    sharedUserId="@MOZ_ANDROID_SHARED_ID@"
+    android:sharedUserId="@MOZ_ANDROID_SHARED_ID@"
     android:versionCode="1"
     android:versionName="1.0" >
-
-    <uses-library android:name="android.test.runner" />
 
     <uses-sdk android:minSdkVersion="8"
               android:targetSdkVersion="14" />
