--- a/src/main/java/org/mozilla/gecko/background/healthreport/HealthReportConstants.java.in
+++ b/src/main/java/org/mozilla/gecko/background/healthreport/HealthReportConstants.java.in
@@ -1,3 +1,4 @@
+#filter substitution
 /* This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
@@ -5,5 +6,8 @@
 package org.mozilla.gecko.background.healthreport;
 
 public class HealthReportConstants {
-  public static final String HEALTH_AUTHORITY = "org.mozilla.gecko.health";
+  public static final String HEALTH_AUTHORITY = "@ANDROID_PACKAGE_NAME@.health";
+  public static final String GLOBAL_LOG_TAG = "GeckoHealth";
+  public static final int MILLISECONDS_PER_DAY = 24 * 60 * 60 * 1000;
+  public static final long EARLIEST_LAST_PING = 1367500000000L;
 }
