WIP on connecting a:hr and b:hr :)

--- a/AndroidManifest.xml.in
+++ b/AndroidManifest.xml.in
@@ -16,6 +16,7 @@
       -->
 
 #include manifests/SyncAndroidManifest_permissions.xml.in
+#include manifests/HealthReportAndroidManifest_permissions.xml.in
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="@ANDROID_PACKAGE_NAME@.permissions.BROWSER_PROVIDER"/>
@@ -27,6 +28,8 @@
                  android:label="@string/sync_app_name">
 
 #include manifests/SyncAndroidManifest_activities.xml.in
+#include manifests/HealthReportAndroidManifest_activities.xml.in
+
 #include manifests/SyncAndroidManifest_services.xml.in
 
         <activity
