--- a/src/main/java/org/mozilla/gecko/background/healthreport/HealthReportConstants.java.in
+++ b/src/main/java/org/mozilla/gecko/background/healthreport/HealthReportConstants.java.in
@@ -10,4 +10,6 @@ public class HealthReportConstants {
   public static final String GLOBAL_LOG_TAG = "GeckoHealth";
   public static final int MILLISECONDS_PER_DAY = 24 * 60 * 60 * 1000;
   public static final long EARLIEST_LAST_PING = 1367500000000L;
+
+  public static final String ACTION_HEALTH_REPORT_REQUEST = "@ANDROID_PACKAGE_NAME@.healthreport.request";
 }
