--- a/src/main/java/org/mozilla/gecko/background/common/GlobalConstants.java.in
+++ b/src/main/java/org/mozilla/gecko/background/common/GlobalConstants.java.in
@@ -45,4 +45,5 @@ public class GlobalConstants {
   // do this automatically, but this will do for now. See Bug 800244.
   public static String GECKO_PREFERENCES_CLASS = "org.mozilla.gecko.GeckoPreferences";
   public static String GECKO_BROADCAST_ANNOUNCEMENTS_PREF_METHOD  = "broadcastAnnouncementsPref";
+  public static String GECKO_BROADCAST_HEALTHREPORT_UPLOAD_PREF_METHOD  = "broadcastHealthReportUploadPref";
 }
