--- a/src/main/java/org/mozilla/gecko/background/healthreport/HealthReportConstants.java.in
+++ b/src/main/java/org/mozilla/gecko/background/healthreport/HealthReportConstants.java.in
@@ -8,13 +8,24 @@ package org.mozilla.gecko.background.healthreport;
 public class HealthReportConstants {
   public static final String HEALTH_AUTHORITY = "@ANDROID_PACKAGE_NAME@.health";
   public static final String GLOBAL_LOG_TAG = "GeckoHealth";
-  public static final int MILLISECONDS_PER_DAY = 24 * 60 * 60 * 1000;
 
   /**
    * The earliest allowable value for the last ping time, corresponding to May 2nd 2013.
    * Used for sanity checks.
    */
   public static final long EARLIEST_LAST_PING = 1367500000000L;
+
+  // Not `final` so we have the option to turn this on at runtime with a magic addon.
+  public static boolean UPLOAD_FEATURE_DISABLED = false;
+  public static long MILLISECONDS_PER_DAY = 24 * 60 * 60 * 1000;
+  public static long MILLISECONDS_PER_SIX_MONTHS = 180 * MILLISECONDS_PER_DAY;
+
+  // Android SharedPreferences branch where global (not per-profile) uploader
+  // settings are stored.
+  public static final String PREFS_BRANCH = "healthreport";
+
+  public static final String PREF_UPLOAD_INTERVAL_MSEC = "upload_interval_msec";
+  public static final long DEFAULT_UPLOAD_INTERVAL_MSEC = MILLISECONDS_PER_DAY / 4;
 
   public static final String ACTION_HEALTHREPORT_UPLOAD_PREF = "@ANDROID_PACKAGE_NAME@.HEALTHREPORT_UPLOAD_PREF";
 }
