--- a/src/main/java/org/mozilla/gecko/background/common/GlobalConstants.java.in
+++ b/src/main/java/org/mozilla/gecko/background/common/GlobalConstants.java.in
@@ -23,7 +23,7 @@ public class GlobalConstants {
 #endif
 
   public static final long BUILD_TIMESTAMP_SECONDS = @MOZ_BUILD_TIMESTAMP@;
-  public static final long BUILD_TIMESTAMP_MSEC = 1000 * @MOZ_BUILD_TIMESTAMP@;
+  public static final long BUILD_TIMESTAMP_MSEC = 1000L * @MOZ_BUILD_TIMESTAMP@L;
 
   public static final String MOZ_APP_DISPLAYNAME = "@MOZ_APP_DISPLAYNAME@";
   public static final String MOZ_APP_VERSION = "@MOZ_APP_VERSION@";
