Bug SCRYPT: Add JUnit 4 scrypt tests.

--- a/android-sync-app/pom.xml
+++ b/android-sync-app/pom.xml
@@ -78,6 +78,11 @@
       <version>4.1.21</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.lambdaworks</groupId>
+      <artifactId>scrypt</artifactId>
+      <version>1.4.0</version>
+    </dependency>
   </dependencies>
 
   <build>
