Bug 870171 - Part 12: Add HealthReportPruneService skeleton.

--- a/manifests/HealthReportAndroidManifest_services.xml.in
+++ b/manifests/HealthReportAndroidManifest_services.xml.in
@@ -12,3 +12,7 @@
             android:exported="false"
             android:name="org.mozilla.gecko.background.healthreport.upload.HealthReportUploadService" >
         </service>
+        <service
+            android:exported="false"
+            android:name="org.mozilla.gecko.background.healthreport.prune.HealthReportPruneService" >
+        </service>
