--- a/src/main/java/org/mozilla/gecko/background/healthreport/HealthReportConstants.java.in
+++ b/src/main/java/org/mozilla/gecko/background/healthreport/HealthReportConstants.java.in
@@ -105,6 +105,16 @@ public class HealthReportConstants {
   // at a time.
   public static final int MAXIMUM_DELETIONS_PER_POST = ((int) DEFAULT_MAXIMUM_FAILURES_PER_DAY + 1) * 2;
 
+  public static final String PREF_PRUNE_BY_SIZE_TIME = "healthreport_prune_by_size_time";
+  public static final long MIN_MILLIS_BETWEEN_PRUNES_BY_SIZE = MILLISECONDS_PER_DAY;
+  // The number of millis into the past the clock can skew before we reset the prune time.
+  public static final long PRUNE_BY_SIZE_SKEW_LIMIT_MILLIS =
+      MIN_MILLIS_BETWEEN_PRUNES_BY_SIZE + 3 * MILLISECONDS_PER_DAY;
+  public static final int MAX_ENVIRONMENT_COUNT = 50;
+  public static final int ENVIRONMENT_COUNT_AFTER_PRUNE = 40;
+  public static final int MAX_EVENT_COUNT = 20000;
+  public static final int EVENT_COUNT_AFTER_PRUNE = 16000;
+
   public static final String PREF_PRUNE_BY_DURATION_TIME = "healthreport_prune_by_duration_time";
   public static final long MIN_MILLIS_BETWEEN_PRUNES_BY_DURATION = MILLISECONDS_PER_DAY * 7;
   // The number of millis into the past the clock can skew before we reset the prune time.
