--- a/android-sync-app/pom.xml
+++ b/android-sync-app/pom.xml
@@ -98,6 +98,11 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.2.2</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.android</groupId>
+      <artifactId>support-v4</artifactId>
+      <version>r7</version>
+    </dependency>
   </dependencies>
 
   <build>
