Bug 870171 - Part 20: Have BroadcastService start PruneService alarm.

--- a/manifests/HealthReportAndroidManifest_activities.xml.in
+++ b/manifests/HealthReportAndroidManifest_activities.xml.in
@@ -22,4 +22,7 @@
             <intent-filter >
               <action android:name="@ANDROID_PACKAGE_NAME@.HEALTHREPORT_UPLOAD_PREF" />
             </intent-filter>
+            <intent-filter >
+              <action android:name="@ANDROID_PACKAGE_NAME@.HEALTHREPORT_PRUNE" />
+            </intent-filter>
         </receiver>
