--- a/android-sync-app/pom.xml
+++ b/android-sync-app/pom.xml
@@ -68,6 +68,12 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>com.android.support</groupId>
+      <artifactId>support-v4</artifactId>
+      <version>18.0.0</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
       <groupId>javassist</groupId>
       <artifactId>javassist</artifactId>
       <version>3.12.1.GA</version>
