--- a/strings/sync_strings.dtd.in
+++ b/strings/sync_strings.dtd.in
@@ -124,3 +124,5 @@
 <!ENTITY fxaccount.email.hint 'Email'>
 <!ENTITY fxaccount.password.hint 'Password'>
 <!ENTITY fxaccount.password2.hint 'Confirm password'>
+<!ENTITY fxaccount.bad.email 'We need a real email address.'>
+<!ENTITY fxaccount.bad.passwords 'Your passwords must match.'>
