--- a/test/AndroidManifest.xml.in
+++ b/test/AndroidManifest.xml.in
@@ -1,7 +1,7 @@
 #filter substitution
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.mozilla.gecko.sync.test"
+    package="@ANDROID_BACKGROUND_TEST_PACKAGE_NAME@"
     sharedUserId="@MOZ_ANDROID_SHARED_ID@"
     android:versionCode="1"
     android:versionName="1.0" >
@@ -9,9 +9,9 @@
     <uses-sdk android:minSdkVersion="8"
               android:targetSdkVersion="14" />
 
-    <uses-permission android:name="@ANDROID_PACKAGE_NAME@.permissions.BROWSER_PROVIDER"/>
-    <uses-permission android:name="@ANDROID_PACKAGE_NAME@.permissions.FORMHISTORY_PROVIDER"/>
-    <uses-permission android:name="@ANDROID_PACKAGE_NAME@.permissions.PASSWORD_PROVIDER"/>
+    <uses-permission android:name="@ANDROID_BACKGROUND_TARGET_PACKAGE_NAME@.permissions.BROWSER_PROVIDER"/>
+    <uses-permission android:name="@ANDROID_BACKGROUND_TARGET_PACKAGE_NAME@.permissions.FORMHISTORY_PROVIDER"/>
+    <uses-permission android:name="@ANDROID_BACKGROUND_TARGET_PACKAGE_NAME@.permissions.PASSWORD_PROVIDER"/>
 
     <application
         android:icon="@drawable/icon"
@@ -21,7 +21,7 @@
 
 
     <instrumentation
-        android:label="Sync tests"
+        android:label="@string/app_name"
         android:name="android.test.InstrumentationTestRunner"
-        android:targetPackage="org.mozilla.gecko" />
+        android:targetPackage="@ANDROID_BACKGROUND_TARGET_PACKAGE_NAME@" />
 </manifest>
