--- a/strings/strings.xml.template
+++ b/strings/strings.xml.template
@@ -13,4 +13,10 @@
 ]>
 <resources>
 #include strings.xml.in
+
+  <!-- These strings are defined by Fennec and used in res/xml/*.xml. -->
+  <string name="moz_app_displayname">@MOZ_APP_DISPLAYNAME@</string>
+  <string name="android_package_name">@ANDROID_PACKAGE_NAME@</string>
+  <string name="content_authority_db_browser">@ANDROID_PACKAGE_NAME@.db.browser</string>
+  <string name="moz_android_shared_account_type">@MOZ_ANDROID_SHARED_ACCOUNT_TYPE@</string>
 </resources>
