--- a/bagheera-client-test/pom.xml
+++ b/bagheera-client-test/pom.xml
@@ -37,6 +37,13 @@
       <optional>true</optional>
     </dependency>
 
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty</artifactId>
+      <version>3.5.7.Final</version>
+      <scope>test</scope>
+    </dependency>
+
     <!-- For testing Bagheera client. -->
     <dependency>
       <groupId>com.mozilla</groupId>
