No bug - Add sharedpreferences-stub dependencies to Maven pom.xml files.
These dependencies are *not* required by maven's test runner, but they
are required to run tests under Eclipse.  This is due to differences in
how maven and Eclipse run Android tests (specifically, in how they
reference android.jar).  It's easiest to install the dependencies using
maven, so here they are.

--- a/android-sync-app/pom.xml
+++ b/android-sync-app/pom.xml
@@ -32,6 +32,13 @@
 
     <!-- Make httpclientandroidlib work. -->
     <dependency>
+      <groupId>android.content</groupId>
+      <artifactId>sharedpreferences-stub</artifactId>
+      <version>1</version>
+      <type>jar</type>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>android.util</groupId>
       <artifactId>log-unstub</artifactId>
       <version>1</version>
