Bug 915312 - Add NativeCrypto exposing pbkdf2SHA256 and sha1.

--- a/android-sync-app/pom.xml
+++ b/android-sync-app/pom.xml
@@ -149,6 +149,7 @@
           </dex>
           <androidManifestFile>${project.basedir}/../AndroidManifest.xml</androidManifestFile>
           <resourceDirectory>${project.basedir}/../res</resourceDirectory>
+          <nativeLibrariesDirectory>${project.basedir}/../libs</nativeLibrariesDirectory>
         </configuration>
         <extensions>true</extensions>
       </plugin>
