--- a/manifests/FxAccountAndroidManifest_activities.xml.in
+++ b/manifests/FxAccountAndroidManifest_activities.xml.in
@@ -1,7 +1,22 @@
         <activity
             android:theme="@style/FxAccountTheme"
             android:icon="@drawable/icon"
-            android:label="@string/fxaccount_label"
+            android:label="Status"
+            android:clearTaskOnLaunch="true"
+            android:name="org.mozilla.gecko.fxa.activities.FxAccountStatusActivity"
+            android:windowSoftInputMode="adjustResize">
+            <!-- Adding a launcher will make this activity appear on the
+                 Apps screen, which we only want when testing. -->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:theme="@style/FxAccountTheme"
+            android:icon="@drawable/icon"
+            android:label="Setup"
             android:clearTaskOnLaunch="true"
             android:name="org.mozilla.gecko.fxa.activities.FxAccountSetupActivity"
             android:windowSoftInputMode="adjustResize">
